# django-doma

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  pytest.sh  runtests.py  tox.ini
doma/: apps.py  models.py  settings.py  signals.py
doma/migrations/: 0001_initial.py  0002_alter_document_file.py  0003_alter_document_preview.py  0004_alter_document_replaces.py
doma/tests/: factories.py  settings.py  tests.py
tests/: factories.py  settings.py  test_models.py
