[tool.poetry]
name = "django-doma"
version = "0.2.1"
description = "Simple Document Management for Django"
authors = ["Florian Rämisch <olf@subsignal.org>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/olf42/django-doma"

packages = [
    { include="doma", from="." },
]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.2"
Pillow = "^8.2.0"
freezegun = "^1.1.0"
pdf2image = "^1.14.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"
pre-commit = "^2.12.0"
factory-boy = "^3.2.0"
poetry = "^1.1.6"
pytest = "^6.2.3"
pytest-django = "^4.2.0"
pytest-cov = "^2.11.1"
tox = "^3.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
